--- a/slides/slides.Rmd
+++ b/slides/slides.Rmd
@@ -34,6 +34,15 @@ here_rel <- function(path)
 
 ```{css, echo = FALSE}
 .content-box-blue { background-color: lightblue; }
+.note {
+	padding: 15px;
+	margin-bottom: 20px;
+	border: 1px solid transparent;
+	border-radius: 4px;
+	background-color: #d9edf7;
+	border-color: #bce8f1;
+	color: #31708f;
+}
 ```
 
 # Introduction
@@ -382,9 +391,12 @@ head(geyser, 4)
 ]
 --
 .pull-right[
+<div class = "note">
 `head` and `tail` return the first and last few rows of a data frame.
 
 They are useful for quick sanity checks.
+</div>
+<!-- foobar - don't ask -->
 ]
 
 --
@@ -428,19 +440,19 @@ ggplot(geyser) +
 --
 This is [`ggplot`](https://ggplot2.tidyverse.org/) code for creating a
 histogram.
+<!-- # nolint start -->
 
 {{content}}
 --
 
+<div class = "note">
 A basic template for creating a plot with `ggplot`:
-
-<!-- # nolint start -->
 
 ```r
 ggplot(data = <DATA>) +
     <GEOM>(mapping = aes(<MAPPINGS>))
 ```
-
+</div>
 <!-- # nolint end -->
 
 ---
@@ -508,12 +520,12 @@ p
 ]
 --
 
+<div class = "note">
 `ggplot` produces a plot object.
 
-{{content}}
---
 Drawing only happens when the object is printed.
-
+</div>
+<!-- foobar - don't ask -->
 
 ---
 ## Old Faithful Eruptions
@@ -586,10 +598,12 @@ sgd <- summarize(group_by(geyser, type),
 ]
 --
 .pull-right[
-`summarize`, `group_by`, and `mutate` are from the `dplyr` package
-that implements a _grammar of data manipulation_.
+<div class = "note">
+The functions `summarize`, `group_by`, and `mutate` are from the
+`dplyr` package that implements a _grammar of data manipulation_.
+</div>
+<!-- foobar - don't ask -->
 ]
-
 
 ---
 ## Old Faithful Eruptions
@@ -610,13 +624,15 @@ sgd
 ```
 --
 
+<div class = "note">
 The pipe operator allows a sequence of operations to be chained together.
 
 --
 
 The left-hand operation is passed implicitly as the first argument to
 the function called on the right.
-
+</div>
+<!-- foobar - don't ask -->
 
 ---
 ## Old Faithful Eruptions
@@ -644,8 +660,10 @@ p
 ]
 --
 
+<div class = "note">
 A `ggplot` can consist of several _layers_.
-
+</div>
+<!-- foobar - don't ask -->
 
 ---
 ## Old Faithful Eruptions
@@ -1110,6 +1128,7 @@ The axis and grid are not helpful; a _theme_ adjustment can remove them:
 {{content}}
 ]
 --
+<div class = "note">
 Themes provide a way to customize the non-data components of plots:
 i.e. titles, labels, fonts, background, grid lines, and legends.
 
@@ -1122,6 +1141,8 @@ Themes can be used to give plots a consistent customized look.
 The `ggthemes` package provides a number of themes to emulate the
 style of different publications, for example `theme_wsj` and
 `theme_economist`.
+</div>
+<!-- foobar - don't ask -->
 
 ---
 ## Hair and Eye Color Data
@@ -1180,9 +1201,7 @@ cowplot::plot_grid(p1, p2)
 ]
 
 ---
-## Hair and Eye Color Data
-
-A more complete `ggplot` template:
+## A more complete `ggplot` template
 
 <!-- # nolint start -->
 
@@ -1323,8 +1342,9 @@ Meaningful visual chunks are moved from iconic memory to short term memory.
 Long term visual memory is built up over a lifetime, though
 infrequently used visual chunks may become lost.
 
----
-## Visual Design Implications
+--
+<div class = "note">
+**Visual Design Implications**
 
 Try to make as much use of preattentive features as possible.
 
@@ -1336,6 +1356,8 @@ Recognize when preattentive features might mislead.
 
 For features that require attentive processing, keep in mind that
 working memory is limited.
+</div>
+<!-- foobar - don't ask -->
 
 
 ---
@@ -1418,11 +1440,13 @@ Munzner's ordering by accuracy:
 Line width is another channel; not sure there is agreement on its
 accuracy, but it is not high.
 
----
-## Visual Design Implications
+--
+<div class = "note">
+**Visual Design Implications**
 
 Try to map the most important variables to the strongest channels.
-
+</div>
+<!-- foobar - don't ask -->
 
 ---
 ## Color
@@ -2061,6 +2085,7 @@ in the project data folder.
 
 --
 
+<div class = "note">
 This file is a text file but uses a non-standard separator.
 
 --
@@ -2075,6 +2100,8 @@ It also includes header and footer information.
 --
 
 It is still reasonably easy to read in.
+</div>
+<!-- foobar - don't ask -->
 
 ---
 ## Unemployment Map
@@ -2360,6 +2387,7 @@ Additional data sets are [available](http://www.gapminder.org/data/).
 
 --
 
+<div class="note">
 Many researchers like to manage their data in a spreadsheet.
 
 --
@@ -2376,6 +2404,8 @@ Many researchers like to manage their data in a spreadsheet.
 
 * As long as the data are in a rectangular region it is usually not
   hard to extract them programmatically.
+</div>
+<!-- foobar - don't ask -->
 
 
 ---
