Put mylabs code into setup chunk.

--- a/tutorial/penguins.Rmd
+++ b/tutorial/penguins.Rmd
@@ -15,6 +15,7 @@ library(learnr)
 library(tidyverse)
 knitr::opts_chunk$set(echo = FALSE, comment = "", warning = FALSE)
 library(palmerpenguins)
+<<mylabs>>
 ```
 
 ## Palmer Penguins
